--- a/index.html
+++ b/index.html
@@ -10,27 +10,23 @@
     <div class="container">
         <header>
             <h1>Plataforma de Aprendizagem Python</h1>
-            <p>Acompanhe seu progresso e melhore suas habilidades em Python!</p>
-            <div id="progress">Progresso: <span id="progress-bar">0%</span></div>
+            <div id="progress-bar-container">
+                <div id="progress-bar"></div>
+            </div>
+            <p id="score">Pontuação: 0</p>
         </header>
 
         <main>
             <section id="quiz-section">
-                <h2>Quiz de Python</h2>
-                <p id="question-text"></p>
+                <h2 id="question-text">Pergunta aparecerá aqui</h2>
                 <div class="options">
-                    <button id="optionA" onclick="checkAnswer('A')"></button>
-                    <button id="optionB" onclick="checkAnswer('B')"></button>
-                    <button id="optionC" onclick="checkAnswer('C')"></button>
-                    <button id="optionD" onclick="checkAnswer('D')"></button>
+                    <button id="optionA" class="option" onclick="checkAnswer('optionA')"></button>
+                    <button id="optionB" class="option" onclick="checkAnswer('optionB')"></button>
+                    <button id="optionC" class="option" onclick="checkAnswer('optionC')"></button>
+                    <button id="optionD" class="option" onclick="checkAnswer('optionD')"></button>
                 </div>
                 <p id="feedback"></p>
-                <button onclick="nextQuestion()">Próxima Pergunta</button>
-            </section>
-
-            <section id="score-section">
-                <h2>Pontuação</h2>
-                <p>Pontos: <span id="score">0</span></p>
+                <button onclick="nextQuestion()" class="next-btn">Próxima Pergunta</button>
             </section>
         </main>
     </div>
