--- a/index.html
+++ b/index.html
@@ -3,18 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plataforma de Aprendizagem Python</title>
+    <title>Code Journey: uma nova forma de aprender programação</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <img src="codejourneytransparente.png" alt="Logo da Empresa" id="logo">
+    </header>    
     <div class="container">
         <header>
-            <h1>Plataforma de Aprendizagem Python</h1>
+            <h1>Code Journey: uma nova forma de aprender programação</h1>
             <div id="progress-bar-container">
                 <div id="progress-bar"></div>
             </div>
             <p id="score">Pontuação: 0</p>
         </header>
+        
 
         <main>
             <section id="quiz-section">
